# xcom-docker-operator

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/: task1.py  task2.py
