[tool.poetry]
name = "xcom-docker-operator"
version = "0.1.0"
description = "Um exemplo de como utilizar xcoms com dockerOperatror"
authors = ["Gabriel Ronchi Brigido <gabrielbrigido1@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
taskipy = "^1.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.taskipy.tasks]
task1 = "python src/task1.py"
task2 = "python src/task2.py"